# ecvis

./: .gitignore  I. Visualization summary.ipynb  III. Supersingular isogeny graphs.ipynb  III.2 Symmetries from modular curves.ipynb  III.3 Modular curves algebraically.ipynb  Modular curves.ipynb  README.md  setup.cfg
Paris/: 2isogenies.nb  Rpolynomials.nb  example71.ipynb
Visualization_notebooks/: I.2 Complex Lattices.ipynb  I.3 Real Elliptic Curves.ipynb
code/: ecfp.py  ecfppoints.py  lattices.py  modularpolynomials.py  primes.py  ringclasses.py  utils.py
ecc/: ecfp.py  ecqf.py  ecv.py  identities.py  lattices.py  modulargroup.py  modularpolynomials.py  nt.py  qfs.py  ringclasses.py  utils.py
ecvis.egg-info/: SOURCES.txt
experiments/: atkinpolys.ipynb  classgroup.ipynb  computing_trace_largep.ipynb  computingendofp.ipynb  hcoefs_from_atk.py  hpolyclassification.ipynb  matrices.ipynb  trace_x0counts.ipynb
old_stuff/: II. Unsupervised learning summary.ipynb  III.1 Modular curves from data.ipynb  Warmup.ipynb
old_stuff/Visualization_notebooks/: I.1 Elliptic curves mod p: Baseline Visuallizations.ipynb  I.2 Complex Lattices.ipynb
share/jupyter/kernels/pythonenvironment/: kernel.json
