[metadata]
name = ecvis
version = 0.1.0
description = Code for visualizing elliptic curves mod p
author = Nadir Hajouji
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nhajouji/ecvis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    matplotlib